--- a/projects/03_coffee_shop_full_stack/.gitignore
+++ b/projects/03_coffee_shop_full_stack/.gitignore
@@ -1,3 +1,23 @@
+# -------------------------------------------------------------------------
+
+_src/
+venv/
+.vscode/
+__pycache__/
+test.db
+
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# -------------------------------------------------------------------------
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
