--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 01-SQL-and-Data-Modeling-for-the-Web/
 02-API-Development-and-Documentation/
 03-Identity-and-Access-Management/
+04-Server-deployment-containerization-and-testing/
 _src/
 .DS_Store
